testdata/baselines/reference/tests_cases_conformance_types_nonPrimitive_nonPrimitiveStrictNull.ts.ast
SourceFile
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' a'
        ObjectKeyword
  VariableStatement
    DeclareKeyword
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' b'
        UnionType
          ObjectKeyword
          LiteralType
            NullKeyword
  VariableStatement
    DeclareKeyword
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' c'
        UnionType
          ObjectKeyword
          UndefinedKeyword
  VariableStatement
    DeclareKeyword
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' d'
        UnionType
          ObjectKeyword
          LiteralType
            NullKeyword
          UndefinedKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' e'
        UnionType
          ObjectKeyword
          LiteralType
            NullKeyword
  ExpressionStatement
    PropertyAccessExpression
      Identifier: '
a'
      Identifier: 'toString'
  ExpressionStatement
    BinaryExpression
      Identifier: ' // error
a'
      EqualsToken
      Identifier: ' undefined'
  ExpressionStatement
    BinaryExpression
      Identifier: ' // error
a'
      EqualsToken
      NullKeyword
  ExpressionStatement
    BinaryExpression
      Identifier: ' // error
a'
      EqualsToken
      Identifier: ' b'
  ExpressionStatement
    BinaryExpression
      Identifier: ' // error
a'
      EqualsToken
      Identifier: ' c'
  ExpressionStatement
    BinaryExpression
      Identifier: ' // error
a'
      EqualsToken
      Identifier: ' d'
  ExpressionStatement
    BinaryExpression
      Identifier: ' // error

e'
      EqualsToken
      Identifier: ' a'
  ExpressionStatement
    BinaryExpression
      Identifier: ' // ok
a'
      EqualsToken
      Identifier: ' e'
  IfStatement
    BinaryExpression
      TypeOfExpression
        Identifier: ' b'
      ExclamationEqualsEqualsToken
      StringLiteral
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    b'
            Identifier: 'toString'
  IfStatement
    BinaryExpression
      TypeOfExpression
        Identifier: ' b'
      EqualsEqualsEqualsToken
      StringLiteral
    Block
      ExpressionStatement
        BinaryExpression
          Identifier: '
    a'
          EqualsToken
          Identifier: ' b'
  IfStatement
    BinaryExpression
      TypeOfExpression
        Identifier: ' d'
      EqualsEqualsEqualsToken
      StringLiteral
    Block
      ExpressionStatement
        BinaryExpression
          Identifier: '
    b'
          EqualsToken
          Identifier: ' d'
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: ' // ok
    d'
            Identifier: 'toString'
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
  IfStatement
    BinaryExpression
      Identifier: 'd'
      EqualsEqualsToken
      NullKeyword
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
  IfStatement
    BinaryExpression
      Identifier: 'd'
      EqualsEqualsEqualsToken
      NullKeyword
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
  IfStatement
    BinaryExpression
      TypeOfExpression
        Identifier: ' d'
      EqualsEqualsEqualsToken
      StringLiteral
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
    Block
      ExpressionStatement
        CallExpression
          PropertyAccessExpression
            Identifier: '
    d'
            Identifier: 'toString'
  InterfaceDeclaration
    Identifier: ' Proxy'
    TypeParameter
      Identifier: 'T'
      ObjectKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' x'
        TypeReference
          Identifier: ' Proxy'
          NumberKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' y'
        TypeReference
          Identifier: ' Proxy'
          LiteralType
            NullKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' z'
        TypeReference
          Identifier: ' Proxy'
          UndefinedKeyword
  InterfaceDeclaration
    Identifier: ' Blah'
    PropertySignature
      Identifier: '
  foo'
      NumberKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' u'
        TypeReference
          Identifier: ' Proxy'
          TypeReference
            Identifier: 'Blah'
